[metadata]
name = python-jsl-NullMember
version = 0.0.1
author = Malik Enes Safak
author_email = e.maliksafak@gmail.com
description = Python Wrapper for JoyShockLibrary using ctypes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NullMember/python-jsl
project_urls =
    Bug Tracker = https://github.com/NullMember/python-jsl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src